--- a/app/src/main/res/drawable/bg_button.xml
+++ b/app/src/main/res/drawable/bg_button.xml
@@ -2,8 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <solid android:color="@color/black"/>
-        <corners android:radius="8dp"/>
+        <solid android:color="#FFFFFF"/>
+        <stroke android:width="4dp"
+            android:color="#000000" />
     </shape>
 </item>
 </selector>
